# struct-analyzer

./: Cargo.toml  README.md
src/: core.rs  fs.rs  main.rs
src/core/: consts.rs  db.rs  op.rs
