[package]
name = "tendermint-struct-analyzer"
version = "0.1.0"
authors = ["Greg Szabo <greg@philosobear.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }
structopt = "0.3"
# For debug:
#syn = { version = "1.0", features = [ "full", "extra-traits" ] }
